syntax = "proto3";

package Http;

message Header {
    string key = 1;
    string value = 2;
}

message WriteHead {
    string id = 1;
    int32 statusCode = 2;
    string statusMessage = 3;
    repeated Header headers = 4;
    message Result {}
}

message Write {
    string id = 1;
    bytes data = 2;
    message Result {}
}

message Request {
    repeated Header headers = 1;
    map<string, string> params = 2;
    message Pop {}
}

service Queue {
    rpc pop(Request.Pop) returns (Request);
    rpc writeHead (WriteHead) returns (WriteHead.Result);
    rpc write (Write) returns (Write.Result);
}

 